<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Highlight Football</string>
    <string name="main_title">Highlight Football</string>

    <!-- MENU -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="action_settings">Settings</string>
    <string name="name_video">CHEL 2 vs 1 MU</string>
    <string name="name_stadium">Stamford Bridge</string>
    <string name="name_tournament">Premier Laguege</string>
    <string name="count_view">10</string>
    <string name="view">View: </string>
    <string name="time">8/30/2014 12:00:00 AM</string>
    <string name="tag">Tag: </string>
    <string name="tag_video">MU,CHELSEA </string>

    <!-- SearchResultActivy -->
    <string name="activity_SearchResult_title_1">Tìm thấy </string>
    <string name="activity_SearchResult_title_2">video với  </string>

</resources>