<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal" >

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="left"
        android:layout_weight="4"
        android:src="@drawable/chelsea_loogo" 
        android:paddingLeft="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:layout_weight="6"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tvNamevideo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/name_video"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNametournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_tournament"
            android:textColor="#003DF5" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view" />

            <TextView
                android:id="@+id/tvViewvideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_view" />

            <TextView
                android:id="@+id/tvTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/tag" />

            <TextView
                android:id="@+id/tvTagvideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_video" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>